# generic-kg-pipeline

./: .env.example  .env.example.new  .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  DETAILED_EXECUTION_PLAN.md  DOCLING_IMPLEMENTATION_PLAN.md  INTEGRATION_PLAN.md  Makefile  QWEN25_VLM_INTEGRATION_PLAN.md  QWEN25_VLM_INTEGRATION_STATUS.md  README.md  VLLM_CONFIGURATION.md  check_output.sh  config.yaml  conversation.txt  create_test_pdf.py  debug_doctags_library.py  github-setup-guide.md  process_all_pdfs_private.py  process_documents.py  process_documents_vllm.py  push-to-github.sh  pyproject.toml  requirements.txt  run_all_tests.sh  run_production_pipeline.py  start_smoldocling_vllm_server.py  start_vllm_smoldocling.sh  test_all_bmw_documents.py  test_basic_parse.py  test_bmw_doctags_success.py  test_bmw_pdf_with_logging.py  test_complete_bmw_processing.py  test_debug_separation.py  test_doctags_final_success.py  test_doctags_hack.py  test_final_doctags_solution.py  test_full_document_extraction.py  (+17 more)
.test_venv/: pyvenv.cfg
api/: __init__.py  main.py
archiv/: COMPREHENSIVE_LEGACY_REMOVAL_PLAN.md  COMPREHENSIVE_TEST_ANALYSIS_REPORT.md  FOCUSED_LEGACY_REMOVAL_PLAN.md  process_bmw_docs.py
config/: chunking.yaml  default.yaml  docling_config.py  unified_config.yaml  unified_config_example.yaml
core/: __init__.py  batch_processor.py  config.py  config_compat.py  config_old.py  content_chunker.py  pipeline_debugger.py  pipeline_debugger_enhanced.py  vllm_batch_processor.py  vllm_batch_processor.py.backup
docker/: Dockerfile  docker-compose.yml
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  BEST_PRACTICES_GUIDE.md  CLAUDE.MD  CURRENT_FEATURES_OVERVIEW.md  DEBUG_PIPELINE.md  DOCLING_COMPATIBILITY_ANALYSIS.md  DOCLING_DIRECT_EXTRACTION.md  DOCLING_INTEGRATION_PLAN.md  DOCLING_TROUBLESHOOTING.md  HOCHSCHUL_LLM.md  MIGRATION_STATUS.md  PARSER_REFACTORING_PLAN.md  PROJECT_ANALYSIS_SUMMARY.md  SMOLDOCLING_BBOX_EXTRACTION.md  SMOLDOCLING_QUICK_TROUBLESHOOTING.md  TEST_REORGANIZATION_PLAN.md  TEST_REORGANIZATION_SUMMARY.md  UNIFIED_SEGMENT_STRUCTURE_PLAN.md  VLLM_SETUP.md  VLLM_SMOLDOCLING.md  chunking_implementation_plan.md  context_inheritance_chunking.md  current_vs_target_state.md  document_structure_analysis.md  vlm_optimization_strategy.md  vlm_pipeline_implementation_plan.md
examples/: hochschul_llm_example.py  vllm_smoldocling_example.py
plugins/: __init__.py
scripts/: create_samples.py  demo_enhanced_report.py  examine_visual_element.py  migrate_config.py  process_documents.py  process_documents_debug.py  process_documents_debug_enhanced.py  test_content_extraction.py  test_visual_elements_structure.py
tests/: README.md  analyze_docling_output.py  analyze_segment_content.py  check_all_visual_tags.py  check_for_picture_tags.py  check_pdf_images.py  check_smoldocling_directly.py  conftest.py  create_test_pdf_with_tables.py  debug_bbox_extraction.py  debug_smoldocling_images.py  generate_bmw_report_from_cache.py  generate_comprehensive_bmw_report.py  process_bmw_documents.py  test_api_endpoints.py  test_bmw_smoldocling.py  test_bmw_structure.py  test_bmw_vlm_full.py  test_check_model_cache.py  test_content_chunker.py  test_context_enhancement.py  test_docling_with_images.py  test_document_parsers.py  test_hochschul_llm.py  test_multi_vlm_comparison.py  test_new_segment_structure_complete.py  test_office_parsers_quick.py  test_pdf_image_extraction.py  test_pixtral_fix.py  test_pixtral_fixed.py  test_public_vlms_comparison.py  test_public_vlms_transformers.py  test_qwen25_forced_images.py  test_qwen25_html_report.py  test_qwen25_simple.py  test_qwen25_vlm_integration.py  test_qwen25_with_vlm.py  test_qwen25vl_openai_api.py  test_qwen25vl_transformers.py  (+10 more)
(+201 files in other folders)
